# x64dbg-mcp

./: .gitignore  README.md  pyproject.toml
docs/: client-config.md
plugin/: CMakeLists.txt  build.ps1
plugin/src/: pluginmain.cpp
src/x64dbg_mcp/: bridge_server.py  server.py
