[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x64dbg-mcp"
version = "0.1.0"
description = "Model Context Protocol server for controlling x64dbg through a native bridge plugin."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
x64dbg-mcp = "x64dbg_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
